# freqmodgrid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VST3-Plugin-Research-Build.md
ci/: build.yml
docs/plans/: 2026-02-19-freqmodgrid-feature-completion-design.md  2026-02-19-freqmodgrid-implementation-plan.md
resources/: FreqmodGrid-AU-Info.plist  FreqmodGrid-VST3-Info.plist  FreqmodGrid-macOS-AUv3-Info.plist  FreqmodGrid-macOS-AUv3Framework-Info.plist  FreqmodGrid-macOS-Info.plist  config.h  resource.h
resources/presets/: factory_presets.json
scripts/: build.sh
src/DSP/: Constants.h  Effects.h  Envelope.h  FMEngine.cpp  FMEngine.h  Filter.h  LFO.h  Operator.h  Oversampler.h  StereoChorus.h  StereoDelay.h
src/iPlug/: FreqmodGrid.cpp  FreqmodGrid.h  FreqmodGridGUI.cpp  FreqmodGridGUI.h  FreqmodGrid_DSP.h  PresetManager.cpp  PresetManager.h
src/plugin/: FreqmodGridEntry.cpp  FreqmodGridProcessor.cpp  FreqmodGridProcessor.h  plugids.h  vst3sdk_stub.h
